@@ -168,11 +168,11 @@ CB_CONFIG_SUPPORT (cb_stop_literal_statement, "stop-literal-statement",
 CB_CONFIG_SUPPORT (cb_stop_identifier_statement, "stop-identifier-statement",
 	_("STOP-identifier statement"))
 
-CB_CONFIG_SUPPORT (cb_debugging_line, "debugging-line",
-	_("DEBUGGING MODE and indicator 'D'"))
+CB_CONFIG_SUPPORT (cb_debugging_mode, "debugging-mode",
+	_("DEBUGGING MODE and debugging indicator"))
 
 CB_CONFIG_SUPPORT (cb_use_for_debugging, "use-for-debugging",
-	_("USE FOR DEBUGGING"))
+	"USE FOR DEBUGGING")
 
 CB_CONFIG_SUPPORT (cb_padding_character_clause, "padding-character-clause",
 	_("PADDING CHARACTER clause"))
