@@ -150,7 +150,7 @@ alter-statement:			obsolete
 comment-paragraphs:			obsolete # not verified yet
 call-overflow:				ok
 data-records-clause:			obsolete # not verified yet
-debugging-line:				ok
+debugging-mode:				ok
 use-for-debugging:			unconformable
 listing-statements:			skip	# only available in IBM mode
 title-statement:			skip	# not available but a reserved word in acu
