@@ -150,7 +150,7 @@ alter-statement:			unconformable
 comment-paragraphs:			unconformable
 call-overflow:				archaic
 data-records-clause:			unconformable
-debugging-line:				obsolete
+debugging-mode:				obsolete
 use-for-debugging:			unconformable
 listing-statements:			skip	# may be a user-defined word
 title-statement:			skip	# may be a user-defined word
