@@ -159,7 +159,7 @@ alter-statement:			obsolete
 comment-paragraphs:			obsolete
 call-overflow:				archaic
 data-records-clause:			obsolete
-debugging-line:				ok
+debugging-mode:				ok
 use-for-debugging:			obsolete
 listing-statements:			skip	# may be a user-defined word
 title-statement:			skip	# may be a user-defined word
