@@ -153,7 +153,7 @@ alter-statement:			obsolete
 comment-paragraphs:			obsolete
 call-overflow:				ok
 data-records-clause:			obsolete
-debugging-line:				obsolete
+debugging-mode:				obsolete
 use-for-debugging:			obsolete
 listing-statements:			ok
 title-statement:			ok
