@@ -1,4 +1,8 @@
 
+2017-06-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* general: renamed "debugging-line" option to "debugging-mode"
+
 2017-06-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* general: added define-constant-directive option
